app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000


# الفلسفة تصميم النظام (System Design)
